spec/rules/at/valid/tuple.js
export const payload  = { point: [1.5, 2.5] }
export const expected = []

